# AIChat

AIChat/: AIChat.py  AIChat.pyproj  AIChat.sln  AIChat_Deepseek.py  AIChat_Doubao.py  AIChat_Doubao_Audio_Stream.py  AIChat_Doubao_Audio_Stream_Sentence.py  CMakeLists.txt  git_info.bat  启动claudecode代理.ps1  火山引擎API密钥AccessKey.txt
AIChat/AIChat/: AIChat_Deepseek.py  AIChat_Doubao.py
